# ChangeLog for app-misc/mucommander-bin
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Feb 2011; Justin Lecher <jlec@gentoo.org>
  mucommander-bin-0.8.6_pre20110116.ebuild,
  mucommander-bin-0.8.6_pre20110205.ebuild,
  mucommander-bin-0.8.6_pre20110213.ebuild, metadata.xml:
  Fix Digests and quoting
