@@ -1,8 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 DIST mucommander-bin-0.8.6_pre20110925.tar.bz2 4198158 RMD160 09a3345d0b33ae17968dff7cf801bbff1141ef3d SHA1 6e3fe2c75b967dbcb1a71f2a101c7a795e688d78 SHA256 5a2d5689e14828506573a115378bae530ba9653c1f65bb6ffdd553dac681f219
 DIST mucommander-bin-0.8.6_pre20111009.tar.bz2 4215027 RMD160 6a55937e30ceb71e04a61d0f24f8de78b01d5d0b SHA1 cbc4e67a3225997ccff68a9732a5019471abdc14 SHA256 c286d1fe08f9cad5e023e77ebca3cd86308249b184edbc71fc29683b731dc2ab
 DIST mucommander-bin-0.8.6_pre20111120.tar.bz2 4218017 RMD160 601bd53f7f8b10c0f158da1910af089145bcdf7a SHA1 ca5d274e61bbef19ddb763c9cf8fb3449cbbca94 SHA256 6a0dec0204bd6d57617b37d9477b7e019171f8ab1b284100255e9c34b772c87c
-EBUILD mucommander-bin-0.8.6_pre20110925.ebuild 1103 RMD160 44cfd9a65f29208c582944f627a991f3d72cb2a9 SHA1 c7e2a7ce45c683b5605fb587cea472c43821f4c3 SHA256 3ba0420d95783ef6fadd70679d1fe7001492017dd53d14296a818c9cd9c24f24
-EBUILD mucommander-bin-0.8.6_pre20111009.ebuild 1103 RMD160 44cfd9a65f29208c582944f627a991f3d72cb2a9 SHA1 c7e2a7ce45c683b5605fb587cea472c43821f4c3 SHA256 3ba0420d95783ef6fadd70679d1fe7001492017dd53d14296a818c9cd9c24f24
-EBUILD mucommander-bin-0.8.6_pre20111120.ebuild 1103 RMD160 44cfd9a65f29208c582944f627a991f3d72cb2a9 SHA1 c7e2a7ce45c683b5605fb587cea472c43821f4c3 SHA256 3ba0420d95783ef6fadd70679d1fe7001492017dd53d14296a818c9cd9c24f24
-MISC ChangeLog 345 RMD160 5e2f9810594102b174b15f501bc4114809c4bcd9 SHA1 bb11b188892443ee220d396774312d509285bbb0 SHA256 906c3f154385b77e9dad049b357795523d0377dc3a9064948d0feae6f4290bd2
-MISC metadata.xml 360 RMD160 d7d4df2bf3ac34a965a910d1694e038ffec210b7 SHA1 8e6676b11f7752f8c79d9a07aad96f887a25dfcf SHA256 d10f0e802b5c8ffb5407cfdea2960b2a8de3c7861830f46002392b24885efed8
+EBUILD mucommander-bin-0.8.6_pre20110925.ebuild 1127 RMD160 f5492f12a0e3d0a04c5a6a68a5d71eeb7a9a6a01 SHA1 45d399fc64b2f23f80980373245bafd8efd5d818 SHA256 37e8fce2770c635a6f3884be2bb5354792d51cbe4a2ae4c6e36d6c07a38648cd
+EBUILD mucommander-bin-0.8.6_pre20111009.ebuild 1127 RMD160 f5492f12a0e3d0a04c5a6a68a5d71eeb7a9a6a01 SHA1 45d399fc64b2f23f80980373245bafd8efd5d818 SHA256 37e8fce2770c635a6f3884be2bb5354792d51cbe4a2ae4c6e36d6c07a38648cd
+EBUILD mucommander-bin-0.8.6_pre20111120.ebuild 1127 RMD160 f5492f12a0e3d0a04c5a6a68a5d71eeb7a9a6a01 SHA1 45d399fc64b2f23f80980373245bafd8efd5d818 SHA256 37e8fce2770c635a6f3884be2bb5354792d51cbe4a2ae4c6e36d6c07a38648cd
+MISC ChangeLog 576 RMD160 9c40badc6bd40027480b69b5c1dd9c06c0d656de SHA1 39451f2f056c3495b20e1d09dab714b8c3047593 SHA256 d2013455759d17d95b24407799d720201b03a9e08282fadad48bb7067f131e69
+MISC metadata.xml 337 RMD160 38751d20a93628591f4ab317ef7feb706258510b SHA1 1c83b3c3f3a7132375d2713d4de834e5b8d4874d SHA256 f2ae19508e9b020fb3c579ad2a1aa7a50148f54c9aff919e8fe0e62d527a8134
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iEYEAREKAAYFAk7UlSMACgkQgAnW8HDreRbVdACeJylFjGEl/6+FatUEaW6CHvpL
+RJEAn0LejSruhqMt77ePGg/FiSjWGPjT
+=2dTx
+-----END PGP SIGNATURE-----
