@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>no-herd</herd>
 	<maintainer>
 		<email>jlec@j-schmitz.net</email>
 		<name>Justin Lecher (jlec)</name>
@@ -11,4 +10,3 @@
 		<name>Johann Schmitz</name>
 	</maintainer>
 </pkgmetadata>
-
