@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  29 Nov 2011; Justin Lecher <jlec@gentoo.org>
+  mucommander-bin-0.8.6_pre20110925.ebuild,
+  mucommander-bin-0.8.6_pre20111009.ebuild,
+  mucommander-bin-0.8.6_pre20111120.ebuild, metadata.xml:
+  Keyworded for prefix, tested by me
+
   16 Feb 2011; Justin Lecher <jlec@gentoo.org>
   mucommander-bin-0.8.6_pre20110116.ebuild,
   mucommander-bin-0.8.6_pre20110205.ebuild,
